--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,12 @@
     <string name="name">Name</string>
     <string name="save">Save</string>
     <string name="successful_created">Successful created</string>
+    <string name="edit_contact">Edit contact</string>
+    <string name="delete_contact">Delete contact</string>
+    <string name="send_message">Send a message</string>
+    <string name="call_contact">Call this contact</string>
+    <string name="send_email">Send a email</string>
+    <string name="confirm_delete">Yes, delete</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm_delete_message">Are you sure you want to delete this contact?</string>
 </resources>
