--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,12 @@
     <string name="confirm_delete">Yes, delete</string>
     <string name="cancel">Cancel</string>
     <string name="confirm_delete_message">Are you sure you want to delete this contact?</string>
+    <string name="contacts">Contacts</string>
+    <string name="favorites">Favorites</string>
+    <string name="search">Search</string>
+    <string name="settings">Settings</string>
+    <string name="contact_information">Contact information</string>
+    <string name="successful_update">Successful updated</string>
+    <string name="no_results">No results</string>
+    <string name="search_contacts">Search contacts</string>
 </resources>
