--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -24,4 +24,8 @@
     <string name="successful_update">Se actualizo correctamente</string>
     <string name="no_results">No hay resultados</string>
     <string name="search_contacts">Buscar contactos</string>
+    <string name="dark_mode">Oscuro</string>
+    <string name="light_mode">Claro</string>
+    <string name="system_mode_default">Definido por el sistema</string>
+    <string name="theme">Temas</string>
 </resources>
