res: Add string resources for UI feedback and empty states
Introduced new string resources for copy confirmation, empty lists, and the "delete all contacts" feature in both English and Spanish locale files.

- Added strings for `copy`, `empty_contacts`, and `empty_favorites`.
- Added strings related to deleting all contacts: `delete_all_contacts`, `delete_all_contacts_content`, and `success_remove_all`.

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -28,4 +28,10 @@
     <string name="light_mode">Claro</string>
     <string name="system_mode_default">Definido por el sistema</string>
     <string name="theme">Temas</string>
+    <string name="copy">Copiado</string>
+    <string name="empty_contacts">No hay contactos</string>
+    <string name="empty_favorites">No hay favoritos</string>
+    <string name="delete_all_contacts_content">Estas seguro de eliminar todos los contactos ? Ya no se podrán recuperar</string>
+    <string name="delete_all_contacts">Eliminar todos los contactos</string>
+    <string name="success_remove_all">Se borraron todos los contactos</string>
 </resources>
